--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="PoliticalPal.png" alt="repl logo" />
+              <img src="PoliticalPal.png" alt="PPal" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
